@@ -10,15 +10,16 @@
   <body>
     <div class="wiki" style="display: block;">
       <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
-              <span>o</span>pen<span>x</span>ava </a> </span> / <a
-
-            href="index_en.html">documentation</a> / </span>Example
-        applications with source code</h1>
+              <span>o</span>pen<span>x</span>ava </a> </span> / <a href="index_en.html">documentation</a>
+          / </span>Example applications with source code</h1>
       OpenXava is a powerful and versatile tool for agile development of
       enterprise applications. While many applications developed with OpenXava
       are commercial and their code is not publicly available, fortunately, we
       have a series of open-source examples that offer a transparent view of how
-      OpenXava works in practice. Here are some of them:<br>
+      OpenXava works in practice. Here are some of them.</div>
+    <div class="wiki" style="display: block;">Also <b><a href="project-templates_en.html">look
+          at Project Templates</a></b> as a simple way to get applications with
+      source code.<br>
       <h2 id="toc1">Invoicedemo y openxavatest</h2>
       Invoicedemo is a simple example of a billing application developed with
       OpenXava. This project demonstrates how basic invoicing functionalities
@@ -30,8 +31,7 @@
       You can visit the <a href="https://github.com/openxava/openxava">repository</a>.
       <p>You can also watch the video on how to clone the repository and import
         the openxavatest project.</p>
-      <p><a href="https://youtu.be/M_8pep7SW7M" target="_blank"><em><img src="files/example-apps_en00.png"
-
+      <p><a href="https://youtu.be/M_8pep7SW7M" target="_blank"><em><img src="files/example-apps_en00.png"
               title="Watch this video" alt="Watch this video"></em></a> </p>
       <h2 id="toc1">Invoicing (OpenXava course)</h2>
       <p>The OpenXava course <a href="https://github.com/openxava/openxava-course_en">repository</a>
