@@ -19,7 +19,10 @@
       comerciales y su código no está disponible públicamente. Por suerte,
       contamos con una serie de ejemplos de código abierto que ofrecen una
       visión transparente de cómo funciona OpenXava en la práctica. Aquí están
-      algunos de ellos: <br>
+      algunos de ellos.</div>
+    <div class="wiki" style="display: block;">También <b><a href="project-templates_es.html">mira
+          las Plantillas de Proyecto</a></b> como una forma simple de obtener
+      aplicaciones con el código fuente.
       <h2 id="toc1">Invoicedemo y openxavatest</h2>
       <p>Invoicedemo es un ejemplo simple de una aplicación de facturación
         desarrollada con OpenXava. Este proyecto muestra cómo se pueden
@@ -33,8 +36,7 @@
       <p>Visíta el <a href="https://github.com/openxava/openxava">repositorio</a>.</p>
       <p>También puedes ver nuestro video de cómo clonar repositorio e importar
         proyecto openxavatest.</p>
-      <p><a href="https://youtu.be/7uzDpnTgdWY" target="_blank"><em><img src="files/example-apps_es00.png"
-
+      <p><a href="https://youtu.be/7uzDpnTgdWY" target="_blank"><em><img src="files/example-apps_es00.png"
               title="Ver este video" alt="Ver este video"></em></a> </p>
       <h2 id="toc1">Facturación (curso de OpenXava)</h2>
       <p>El <a href="https://github.com/openxava/openxava-course_es">repositorio</a>
