@@ -15,9 +15,8 @@
       <h2 id="toc1"><a name="OpenXava documentation-Quick start"></a>Quick start</h2>
       <ul>
         <li><a href="how-to-install_en.html">How to install</a></li>
-        <li><a class="wiki_link" href="getting-started_en.html">Watch the
-            Getting started video</a> or <a class="wiki_link" href="getting-started_en.html#toc2">follow
-            the Getting started guide</a></li>
+        <li><a class="wiki_link" href="getting-started_en.html">Getting started
+            guide using OpenXava Studio (RECOMMENDED)</a></li>
         <li> <a class="wiki_link" href="getting-started-intellij_en.html">Getting
             started guide using IntelliJ <br>
           </a></li>
@@ -25,6 +24,7 @@
             started guide using Maven </a></li>
         <li><a class="wiki_link" href="getting-started-vsc_en.html">Getting
             started guide using Visual Studio Code</a></li>
+        <li><a class="wiki_link" href="project-templates_en.html">Project templates</a></li>
       </ul>
       <h2 id="toc2"><a name="OpenXava documentation-Course"></a>Course</h2>
       <ul>
@@ -64,7 +64,8 @@
           <h3>Basic business logic</h3>
         </li>
         <ul>
-          <li><a class="wiki_link" href="basic-business-logic_en.html"> </a><a
+          <li><a class="wiki_link" href="basic-business-logic_en.html"> </a><a
+
               class="wiki_link" href="java-properties_en.html">Lesson 9: Java
               properties</a> </li>
           <li><a class="wiki_link" href="calculated-properties_en.html">Lesson
@@ -89,7 +90,8 @@
         </li>
         <ul>
           <li><a class="wiki_link" href="validating-with-entityvalidator_en.html">Lesson
-              18: Validating with @EntityValidator&nbsp;</a>&nbsp;&nbsp;<a class="wiki_link"
+              18: Validating with @EntityValidator&nbsp;</a>&nbsp;&nbsp;<a class="wiki_link"
+
               href="validation-alternatives_en.html"><span style="color: #505050;"></span></a></li>
           <li><a class="wiki_link" href="validation-alternatives_en.html">Lesson
               19: Validation alternatives&nbsp;</a>&nbsp;&nbsp;</li>
@@ -246,7 +248,8 @@
         <li><a class="wiki_link" href="wtp_en.html">Eclipse Web Tools Platform</a></li>
         <li><a class="wiki_link" href="jboss_en.html">JBoss</a></li>
         <li><a class="wiki_link" href="websphere_en.html">WebSphere</a></li>
-        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.be/2014/01/how-to-cloudbees-minuteproject-4.html"
+        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.be/2014/01/how-to-cloudbees-minuteproject-4.html"
+
             rel="nofollow">Deploy on Cloudbees</a></li>
         <li><a class="wiki_link" href="ant-from-eclipse_en.html">Executing Ant
             tasks from Eclipse</a></li>
@@ -255,9 +258,11 @@
         <li><a class="wiki_link" href="java14_en.html">Java 1.4</a></li>
         <li><a class="wiki_link" href="maven-setup_en.html">Configuration for
             Maven</a></li>
-        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.com/2011/12/adding-ehcache-to-openxava-application.html"
+        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.com/2011/12/adding-ehcache-to-openxava-application.html"
+
             rel="nofollow">Enable Ehcache for OpenXava</a></li>
-        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.com/2012/02/adding-spring-security-to-openxava.html"
+        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.com/2012/02/adding-spring-security-to-openxava.html"
+
             rel="nofollow">Enable Spring security for OpenXava</a></li>
       </ul>
       <h2 id="toc6"><a name="OpenXava documentation-FAQs"></a>FAQs</h2>
