@@ -16,9 +16,8 @@
         rápido</h2>
       <ul>
         <li><a href="how-to-install_es.html">Cómo instalarlo</a></li>
-        <li><a class="wiki_link" href="getting-started_es.html">Mira el video de
-            primeros pasos</a> o <a class="wiki_link" href="getting-started_es.html#toc2">sigue
-            la guía de primeros pasos</a></li>
+        <li><a class="wiki_link" href="getting-started_es.html">Guía de primeros
+            pasos usando OpenXava Studio (RECOMENDADO)</a></li>
         <li><a class="wiki_link" href="getting-started-intellij_es.html">Guía de
             primeros pasos usando IntelliJ <br>
           </a></li>
@@ -27,6 +26,8 @@
           </a></li>
         <li><a class="wiki_link" href="getting-started-vsc_es.html">Guía de
             primeros pasos usando Visual Studio Code</a></li>
+        <li><a class="wiki_link" href="project-templates_es.html">Plantillas de
+            proyecto</a></li>
       </ul>
       <h2 id="toc2"><a name="Documentación de OpenXava-Curso"></a>Curso</h2>
       <ul>
