@@ -32,7 +32,7 @@
         alt="project-template-studio-wizard.png" title="project-template-studio-wizard.png"><br>
       For example, if you choose <i>Project Management</i> and click <i>Finish</i>,
       in a few seconds you'll have a project management application in OpenXava,
-      ready to go.<br>
+      ready to go. <br>
       If you use IntelliJ, VisualStudio Code, or Maven from the command line,
       you can refer to the Maven archetypes because each of these templates
       corresponds to a Maven archetype. Below, you will find the name of the
